--- a/sass/helpers/placeholders/_placeholders.sass
+++ b/sass/helpers/placeholders/_placeholders.sass
@@ -1,1 +1,15 @@
 // Placeholders
+%hidden
+	border: 0
+	clip: rect(0 0 0 0)
+	height: 1px
+	margin: -1px
+	overflow: hidden
+	padding: 0
+	position: absolute
+	width: 1px
+
+%reset-list
+	padding-left: 0
+	li
+		list-style: none
